--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header class="">
+    <header class="header">
         <a href="index.html">
-            <img src="./img/logo.png" alt="Logotipo">
+            <img  class="header__logo" src="./img/logo.png" alt="Logotipo">
         </a>
     </header>
-    <nav>
-        <a href="#">Tienda</a>
-        <a href="#">Nosotros</a>
+    <nav class="navegacion">
+        <a class="navegacion__enlace" href="#">Tienda</a>
+        <a class="navegacion__enlace" href="#">Nosotros</a>
     </nav>
 </body>
 </html>
