--- a/producto.html
+++ b/producto.html
@@ -17,11 +17,11 @@
         </a>
     </header>
     <nav class="navegacion">
-        <a class="navegacion__enlace navegacino__enlace--activo" href="index.html">Tienda</a>
+        <a class="navegacion__enlace" href="index.html">Tienda</a>
         <a class="navegacion__enlace" href="Nosotros.html">Nosotros</a>
     </nav>
     <main class="contenedor">
-        <h1>Nuestros Productos</h1>
+        <h1>Productos</h1>
     </main>
     <footer class="footer">
         <p class="footer__texto">Front End Store- Todos los derechos Reservados 2023.</p>
