--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <main class="contenedor">
         <h1>Nuestros Productos</h1>
         <div class="grid">
-            <div class="Producto">
+            <div class="producto">
                 <a href="producto.html">
                     <img class="producto__imagen" src="img/1.jpg" alt="camisa">
                     <div class="producto__informacion">
@@ -32,7 +32,7 @@
                     </div>
                 </a>
             </div><!--.producto-->
-            <div class="Producto">
+            <div class="producto">
                 <a href="producto.html">
                     <img class="producto__imagen" src="img/2.jpg" alt="camisa">
                     <div class="producto__informacion">
@@ -41,7 +41,7 @@
                     </div>
                 </a>
             </div><!--.producto-->
-            <div class="Producto">
+            <div class="producto">
                 <a href="producto.html">
                     <img class="producto__imagen" src="img/3.jpg" alt="camisa">
                     <div class="producto__informacion">
@@ -50,7 +50,7 @@
                     </div>
                 </a>
             </div><!--.producto-->
-            <div class="Producto">
+            <div class="producto">
                 <a href="producto.html">
                     <img class="producto__imagen" src="img/4.jpg" alt="camisa">
                     <div class="producto__informacion">
@@ -59,7 +59,7 @@
                     </div>
                 </a>
             </div><!--.producto-->
-            <div class="Producto">
+            <div class="producto">
                 <a href="producto.html">
                     <img class="producto__imagen" src="img/5.jpg" alt="camisa">
                     <div class="producto__informacion">
@@ -68,7 +68,7 @@
                     </div>
                 </a>
             </div><!--.producto-->
-            <div class="Producto">
+            <div class="producto">
                 <a href="producto.html">
                     <img class="producto__imagen" src="img/6.jpg" alt="camisa">
                     <div class="producto__informacion">
@@ -77,7 +77,7 @@
                     </div>
                 </a>
             </div><!--.producto-->
-            <div class="Producto">
+            <div class="producto">
                 <a href="producto.html">
                     <img class="producto__imagen" src="img/7.jpg" alt="camisa">
                     <div class="producto__informacion">
@@ -86,7 +86,7 @@
                     </div>
                 </a>
             </div><!--.producto-->
-            <div class="Producto">
+            <div class="producto">
                 <a href="producto.html">
                     <img class="producto__imagen" src="img/8.jpg" alt="camisa">
                     <div class="producto__informacion">
@@ -95,7 +95,7 @@
                     </div>
                 </a>
             </div><!--.producto-->
-            <div class="Producto">
+            <div class="producto">
                 <a href="producto.html">
                     <img class="producto__imagen" src="img/9.jpg" alt="camisa">
                     <div class="producto__informacion">
@@ -104,7 +104,7 @@
                     </div>
                 </a>
             </div><!--.producto-->
-            <div class="Producto">
+            <div class="producto">
                 <a href="producto.html">
                     <img class="producto__imagen" src="img/10.jpg" alt="camisa">
                     <div class="producto__informacion">
@@ -113,7 +113,7 @@
                     </div>
                 </a>
             </div><!--.producto-->
-            <div class="Producto">
+            <div class="producto">
                 <a href="producto.html">
                     <img class="producto__imagen" src="img/11.jpg" alt="camisa">
                     <div class="producto__informacion">
@@ -122,7 +122,7 @@
                     </div>
                 </a>
             </div><!--.producto-->
-            <div class="Producto">
+            <div class="producto">
                 <a href="producto.html">
                     <img class="producto__imagen" src="img/12.jpg" alt="camisa">
                     <div class="producto__informacion">
@@ -131,7 +131,7 @@
                     </div>
                 </a>
             </div><!--.producto-->
-            <div class="Producto">
+            <div class="producto">
                 <a href="producto.html">
                     <img class="producto__imagen" src="img/13.jpg" alt="camisa">
                     <div class="producto__informacion">
@@ -140,7 +140,7 @@
                     </div>
                 </a>
             </div><!--.producto-->
-            <div class="Producto">
+            <div class="producto">
                 <a href="producto.html">
                     <img class="producto__imagen" src="img/14.jpg" alt="camisa">
                     <div class="producto__informacion">
