dando estilos con CSS a la pagina de Nosotros.

--- a/Nosotros.html
+++ b/Nosotros.html
@@ -22,6 +22,15 @@
     </nav>
     <main class="contenedor">
         <h1>Nosotros</h1>
+        <div class="nosotros">
+            <div class="nosotros__contenido">
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ut minus provident, ipsam fugiat eaque laboriosam illum repellat, debitis in magnam ipsum veritatis nulla molestiae earum porro facere vel odio ratione?Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum deserunt quam aspernatur ea in quaerat blanditiis culpa eligendi, labore sint cupiditate a sequi doloremque incidunt, temporibus perspiciatis? At, provident sapiente!
+                Vel, deleniti distinctio. Quas officia illo tenetur fugit aspernatur placeat totam corrupti. Dicta quas hic, consectetur eligendi fuga quis adipisci recusandae magnam dignissimos odit, quos ad facilis. Iste, quam ab!
+                Nulla animi reprehenderit nam quisquam iure ullam eaque illo eveniet nostrum pariatur ipsam repellendus voluptate architecto mollitia quo labore provident explicabo dignissimos earum fugit, qui nihil, repellat perspiciatis? Repellendus, iste?
+                Dolore nulla illo earum ex, dolores tempore quaerat quis vero eaque veniam nisi fugiat consequatur aliquid nostrum quasi ipsum a accusantium repellat quia! Ipsam id cupiditate exercitationem magnam architecto ducimus!</p>
+            </div>
+            <img class="nosotros__imagen" src="img/nosotros.jpg" alt="imagen nosotros">
+        </div>
     </main>
     <footer class="footer">
         <p class="footer__texto">Front End Store- Todos los derechos Reservados 2023.</p>
