Creando seccion iconos en Nosotros.

--- a/Nosotros.html
+++ b/Nosotros.html
@@ -32,6 +32,31 @@
             <img class="nosotros__imagen" src="img/nosotros.jpg" alt="imagen nosotros">
         </div>
     </main>
+    <section class="contenedor comprar">
+        <h2 class="comprar__titulo">¿Por qué comprar con nosotros?</h2>
+        <div class="bloques">
+            <div class="bloque">
+                <img class="bloque__imagen" src="img/icono_1.png"alt="¿Por que comprar?">
+                <h3 class="bloque__titulo">El mejor precio</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel veritatis dolorem aliquid labore? Perferendis sunt exercitationem alias voluptatum cumque placeat, nam at quidem dicta dolor? Veniam numquam saepe voluptate voluptas.</p>
+            </div><!--.bloque-->
+            <div class="bloque">
+                <img class="bloque__imagen" src="img/icono_2.png"alt="Para Devs">
+                <h3 class="bloque__titulo">Para Devs</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel veritatis dolorem aliquid labore? Perferendis sunt exercitationem alias voluptatum cumque placeat, nam at quidem dicta dolor? Veniam numquam saepe voluptate voluptas.</p>
+            </div><!--.bloque-->
+            <div class="bloque">
+                <img class="bloque__imagen" src="img/icono_3.png"alt="Envios Gratis">
+                <h3 class="bloque__titulo">envios Gratis</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel veritatis dolorem aliquid labore? Perferendis sunt exercitationem alias voluptatum cumque placeat, nam at quidem dicta dolor? Veniam numquam saepe voluptate voluptas.</p>
+            </div><!--.bloque-->
+            <div class="bloque">
+                <img class="bloque__imagen" src="img/icono_4.png"alt="La mejor calidad">
+                <h3 class="bloque__titulo">La mejor calidad</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel veritatis dolorem aliquid labore? Perferendis sunt exercitationem alias voluptatum cumque placeat, nam at quidem dicta dolor? Veniam numquam saepe voluptate voluptas.</p>
+            </div><!--.bloque-->
+        </div><!--.bloques-->
+    </section>
     <footer class="footer">
         <p class="footer__texto">Front End Store- Todos los derechos Reservados 2023.</p>
     </footer>
