HTML para la seleccion de Producto.

--- a/producto.html
+++ b/producto.html
@@ -21,7 +21,23 @@
         <a class="navegacion__enlace" href="Nosotros.html">Nosotros</a>
     </nav>
     <main class="contenedor">
-        <h1>Productos</h1>
+        <h1>React JS</h1>
+        <div class="camisa">
+            <img class="camisa__imagen" src="img/3.jpg" alt="Imagen del producto">
+            <div class="camisa__contenido">
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Explicabo, vero ipsam saepe dolor porro id, exercitationem labore sapiente eaque sed in eius quia veniam cum optio fugiat quas rerum dignissimos.</p>
+                <form class="formulario">
+                    <select>
+                        <option disabled selected>Seleccionar Talla</option>
+                        <option>Chica</option>
+                        <option>Mediana</option>
+                        <option>Grande</option>
+                    </select>
+                    <inout type="number" aria-placeholder="Cantidad" min="1">
+                        <input type="submit" value="Agregar al Carrito">
+                </form>
+            </div>
+        </div>
     </main>
     <footer class="footer">
         <p class="footer__texto">Front End Store- Todos los derechos Reservados 2023.</p>
