--- a/producto.html
+++ b/producto.html
@@ -27,14 +27,14 @@
             <div class="camisa__contenido">
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Explicabo, vero ipsam saepe dolor porro id, exercitationem labore sapiente eaque sed in eius quia veniam cum optio fugiat quas rerum dignissimos.</p>
                 <form class="formulario">
-                    <select>
+                    <select class="formulario__campo">
                         <option disabled selected>Seleccionar Talla</option>
                         <option>Chica</option>
                         <option>Mediana</option>
                         <option>Grande</option>
                     </select>
-                    <inout type="number" aria-placeholder="Cantidad" min="1">
-                        <input type="submit" value="Agregar al Carrito">
+                    <input class="formulario__campo" type="number" aria-placeholder="Cantidad" min="1">
+                        <input class="formulario__submit" type="submit" value="Agregar al Carrito">
                 </form>
             </div>
         </div>
